...
                  }
                },
                destinations: const [
                  NavigationDestination(
                    icon: Icon(Icons.home_outlined),
                    selectedIcon: Icon(Icons.home),
                    label: 'Start',
                  ),
                  NavigationDestination(
                    icon: Icon(Icons.school_outlined),
                    selectedIcon: Icon(Icons.school),
                    label: 'Lernen',
                  ),
...
                    icon: Icon(Icons.fire_truck_outlined),
                    selectedIcon: Icon(Icons.fire_truck),
                    label: 'Fahrzeuge',
                  ),
                  NavigationDestination(
                    icon: Icon(Icons.more_horiz),
                    label: 'Mehr',
                  ),
                ],
              )
              : null,
    );
  }
...
